# teste-micropagamento

./: README.md
user-service/: pyproject.toml
user-service/tests/: factories.py  test_models.py  test_serializer.py  test_urls.py  test_views.py
user-service/user_microservice/: asgi.py  settings.py  urls.py  wsgi.py
user-service/users/: models.py  permissions.py  serializers.py  urls.py  views.py
user-service/users/migrations/: 0001_initial.py  0002_alter_userprofile_user.py
