[tool.poetry]
name = "user-service"
version = "0.1.0"
description = ""
authors = ["rodrigodsn <rodrigo.barros.dsn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
djangorestframework = "^3.15.1"
python-dotenv = "^1.0.1"
ipdb = "^0.13.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
